--- a/index.html
+++ b/index.html
@@ -1,77 +1,69 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LYNKUP — Real-time Social Connection</title>
-    <meta
-      name="description"
-      content="LYNKUP is a real-time social connection app that helps you meet people nearby now for simple offline moments."
-    />
-    
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-
-    <!-- Tailwind CSS -->
+    <title>LYNKUP - Connect Authentically</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
           extend: {
             fontFamily: {
-              sans: ['League Spartan', 'sans-serif'],
+              sans: ['Inter', 'sans-serif'],
             },
             colors: {
-              lynkup: {
-                yellow: '#ffd600',
-                dark: '#050505',
-                surface: '#121212',
-                surfaceAlt: '#1a1a1a',
-                muted: '#a3a3a3',
+              primary: {
+                50: '#f0f9ff',
+                100: '#e0f2fe',
+                200: '#bae6fd',
+                300: '#7dd3fc',
+                400: '#38bdf8',
+                500: '#0ea5e9',
+                600: '#0284c7',
+                700: '#0369a1',
+                800: '#075985',
+                900: '#0c4a6e',
+              },
+              secondary: {
+                50: '#f5f3ff',
+                100: '#ede9fe',
+                200: '#ddd6fe',
+                300: '#c4b5fd',
+                400: '#a78bfa',
+                500: '#8b5cf6',
+                600: '#7c3aed',
+                700: '#6d28d9',
+                800: '#5b21b6',
+                900: '#4c1d95',
               }
-            },
-            backgroundImage: {
-              'radial-top': 'radial-gradient(circle at top left, #1a1a1a 0, #000000 55%, #000000 100%)',
-              'radial-accent': 'radial-gradient(circle at top right, #1b1b1b 0, #050505 50%, #000000 100%)',
             }
           }
         }
       }
     </script>
     <style>
-      /* Custom scrollbar for webkit */
-      ::-webkit-scrollbar {
-        width: 8px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #000; 
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #333; 
-        border-radius: 4px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #ffd600; 
-      }
+      html { scroll-behavior: smooth; }
     </style>
   <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.1",
     "react-dom/": "https://esm.sh/react-dom@^19.2.1/",
-    "react/": "https://esm.sh/react@^19.2.1/"
+    "react/": "https://esm.sh/react@^19.2.1/",
+    "lucide-react": "https://esm.sh/lucide-react@^0.559.0",
+    "vite": "https://esm.sh/vite@^7.2.7",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-black text-gray-100 antialiased selection:bg-lynkup-yellow selection:text-black">
+  <body>
     <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   <script type="module" src="/index.tsx"></script>
 </body>
 </html>
